--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
 
                 <h1> Calculator <h2>
                   <a href="calci.html">Click here to open calculator </a>
+                  <br><br>
+
+                  <h1> Array Operations </h1>
+                  <a href="arrayop.html">Click here to perfrom array operations</a>
               
               </body>
 </html>
